<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    android:id="@+id/mainSignuplayout"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgCancel"
        android:layout_width="@dimen/fourty_five_dp"
        android:layout_height="@dimen/fourty_five_dp"
        android:layout_margin="@dimen/ten_dp"
        android:clickable="true"
        android:onClick="Cancel"
        android:padding="@dimen/ten_dp"
        android:src="@drawable/cancel" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_weight="6.5"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/twenty_dp"
            android:paddingRight="@dimen/twenty_dp">

            <com.neopixl.pixlui.components.edittext.EditText
                android:id="@+id/usernameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/thirty_dp"
                android:background="@drawable/white_rounded_corners"
                android:gravity="center"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:padding="@dimen/fifteen_dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="@dimen/eighteen_sp"
                pixlui:typeface="OpenSans-Light.ttf" />

            <com.neopixl.pixlui.components.edittext.EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:background="@drawable/white_rounded_corners"
                android:gravity="center"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:padding="@dimen/fifteen_dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="@dimen/eighteen_sp"
                pixlui:typeface="OpenSans-Light.ttf" />

            <com.neopixl.pixlui.components.edittext.EditText
                android:id="@+id/confPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:background="@drawable/white_rounded_corners"
                android:gravity="center"
                android:hint="@string/confirm_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:padding="@dimen/fifteen_dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="@dimen/eighteen_sp"
                pixlui:typeface="OpenSans-Light.ttf" />

            <com.neopixl.pixlui.components.edittext.EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:background="@drawable/white_rounded_corners"
                android:gravity="center"
                android:hint="@string/email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:padding="@dimen/fifteen_dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="@dimen/eighteen_sp"
                pixlui:typeface="OpenSans-Light.ttf" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.2"
        android:gravity="bottom"
        android:orientation="vertical">
        <com.neopixl.pixlui.components.textview.TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:text="@string/i_am"
            android:textColor="@android:color/white"
            android:textSize="@dimen/eighteen_sp"
            pixlui:typeface="OpenSans-Light.ttf" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginTop="@dimen/five_dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/sellerLL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/five_dp"
                android:paddingTop="@dimen/five_dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/fourty_five_dp"
                    android:src="@drawable/seller" />

                <com.neopixl.pixlui.components.textview.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/two_dp"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:text="@string/seller"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/thirteen_sp"
                    pixlui:typeface="OpenSans-Light.ttf" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buyerLL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/five_dp"
                android:paddingTop="@dimen/five_dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/fourty_five_dp"
                    android:src="@drawable/buyer" />

                <com.neopixl.pixlui.components.textview.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/two_dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/buyer"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/thirteen_sp"
                    pixlui:typeface="OpenSans-Light.ttf" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/deliveryBoyLL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/five_dp"
                android:paddingTop="@dimen/five_dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/fourty_five_dp"
                    android:src="@drawable/delivery_boy" />

                <com.neopixl.pixlui.components.textview.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/two_dp"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:text="@string/delivery_boy"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/thirteen_sp"
                    pixlui:typeface="OpenSans-Light.ttf" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/laborLL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/five_dp"
                android:paddingTop="@dimen/five_dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/fourty_five_dp"
                    android:src="@drawable/labor" />

                <com.neopixl.pixlui.components.textview.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/two_dp"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:text="@string/labor"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/thirteen_sp"
                    pixlui:typeface="OpenSans-Light.ttf" />
            </LinearLayout>

        </LinearLayout>

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sixty_dp"
            android:layout_marginTop="1dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/continue_text"
            android:textColor="@color/header"
            android:textSize="@dimen/twenty_two_sp"
            pixlui:typeface="OpenSans-Regular.ttf" />
    </LinearLayout>
</LinearLayout>