<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/twenty_dp">

            <com.neopixl.pixlui.components.edittext.EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userNametxt"
                android:layout_marginTop="@dimen/thirty_dp"
                android:background="@drawable/white_rounded_corners"
                android:gravity="center"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:padding="@dimen/fifteen_dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="@dimen/eighteen_sp"
                pixlui:typeface="OpenSans-Light.ttf" />

            <com.neopixl.pixlui.components.edittext.EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:id="@+id/passwordtxt"
                android:background="@drawable/white_rounded_corners"
                android:gravity="center"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:padding="@dimen/fifteen_dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="@dimen/eighteen_sp"
                pixlui:typeface="OpenSans-Light.ttf" />

        </LinearLayout>
    </LinearLayout>
    <com.neopixl.pixlui.components.textview.TextView
        android:id="@+id/txtSignin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/seventy_dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:clickable="true"
        android:gravity="center"
        android:onClick="Login"
        android:padding="@dimen/eighteen_sp"
        android:text="@string/login"
        android:textColor="@color/header"
        android:textSize="@dimen/twenty_two_sp"
        pixlui:typeface="OpenSans-Regular.ttf" />
</RelativeLayout>