<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.elgroup.foodbeat.CustomViews.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include
        android:id="@+id/noItemView"
        layout="@layout/empty_basket_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerView"
        android:visibility="gone" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerView"
        android:layout_marginBottom="@dimen/seventy_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/productsLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <include
                android:id="@+id/payments"
                layout="@layout/basket_payment_method" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

            <include
                android:id="@+id/payments"
                layout="@layout/basket_saved_address" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:gravity="center"
                android:maxLines="2"
                android:padding="@dimen/ten_dp"
                android:text="@string/have_a_promo_code"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sixteen_sp"
                pixlui:typeface="Roboto-Regular.ttf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/twenty_dp"
                android:layout_marginRight="@dimen/twenty_dp"
                android:background="@drawable/green_border_circle"
                android:orientation="horizontal">

                <com.neopixl.pixlui.components.edittext.EditText
                    android:id="@+id/edtAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:background="@android:color/transparent"
                    android:gravity="left|center_vertical"
                    android:hint="@string/add_address"
                    android:maxLines="2"
                    android:padding="@dimen/twelve_dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sixteen_sp"
                    pixlui:typeface="Roboto-Regular.ttf" />

                <com.neopixl.pixlui.components.textview.TextView
                    android:id="@+id/txtEdit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/green_circle_without_border"
                    android:gravity="center"
                    android:text="@string/apply"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sixteen_sp"
                    pixlui:typeface="OpenSans-Bold.ttf" />
            </LinearLayout>
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <com.neopixl.pixlui.components.textview.TextView
        android:id="@+id/txtContinue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixty_dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="@dimen/fifteen_dp"
        android:text="@string/continue_text"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/twenty_sp"
        pixlui:typeface="OpenSans-Bold.ttf" />
</RelativeLayout>